# ResearchPaperProtocol

./: CMakeLists.txt  citation.cff  client.cpp  client.h  data.txt  master.cpp  master.h  server.cpp  server.h
